--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
+  - "*admin/*"
 
 # Writing
 new_post_name: :title.md # File name of new posts
@@ -73,9 +74,12 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: default
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type:
+
+# include:
+#   - _redirects
