--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "start": "concurrently --kill-others-on-fail \"npm run watch\" \"npm run assets\" --names '🚀  ⠶ Hexo,🚦  ⠶ Webpack' --prefix name",
+    "watch": "hexo server",
+    "assets": "webpack -p --watch"
+  },
   "hexo": {
     "version": "3.8.0"
   },
@@ -14,6 +19,29 @@
     "hexo-generator-tag": "^0.2.0",
     "hexo-render-pug": "^2.0.0",
     "hexo-renderer-marked": "^0.3.2",
-    "hexo-server": "^0.3.1"
+    "hexo-server": "^0.3.1",
+    "sanitize.css": "^8.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "autoprefixer": "^9.3.1",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^1.0.0",
+    "concurrently": "^4.0.1",
+    "css-loader": "^1.0.1",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "mini-css-extract-plugin": "^0.4.4",
+    "node-sass": "^4.10.0",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^1.15.2",
+    "sass-loader": "^7.1.0",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2"
   }
 }
