--- a/themes/default/_config.yml
+++ b/themes/default/_config.yml
@@ -1,21 +1,13 @@
-
-# html lang
 language: en
 
-# main menu navigation
 menu:
   Home: /
   About: /about
-  Contact: /contact
-  Archives: /archives
 
-# Miscelaneous
 favicon: /favicon.ico
 
-# stylesheets loaded in the <head>
 stylesheets:
-- /css/default.css
+- /dist/style.css
 
-# scripts loaded in the end of the body
 scripts:
-- /js/default.js
+- /dist/bundle.js
